footer gap fix

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -179,4 +179,8 @@ footer {
       }
     }
   }
+
+  .footer__wrapper > div {
+    margin-right: 2rem;
+  }
 }
